--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.techidea.commondemo.MainActivity">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                tools:context="com.techidea.commondemo.MainActivity">
+
     <Button
         android:id="@+id/button_recycler_list"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:text="recyclerview_list"/>
+
     <Button
         android:id="@+id/button_recycler_grid"
         android:layout_width="match_parent"
-        android:layout_below="@id/button_recycler_list"
         android:layout_height="48dp"
+        android:layout_below="@id/button_recycler_list"
         android:text="recyclerview_grid"/>
+
+    <Button
+        android:id="@+id/button_arcmenu"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_below="@id/button_recycler_grid"
+        android:text="arcmenu"/>
+
+    <Button
+        android:id="@+id/button_raymenu"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_below="@id/button_arcmenu"
+        android:text="raymenu"/>
 
     <GridView
         android:id="@+id/gridview"
-        android:layout_below="@id/button_recycler_grid"
         android:layout_width="match_parent"
-        android:numColumns="3"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/button_raymenu"
+        android:numColumns="3">
     </GridView>
 </RelativeLayout>
